# owasp-logger

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: pull-request.yaml
examples/: dedicated_audit_logs.py  nested_json.py  otel.py  plain_json.py  plaintext.py  random_otel.py
src/: owasp_logger.py
src/owasp_logger/: logger.py  model.py  otel.py
