# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "owasp-logger"
version = "0.1.4"
description = "OWASP-compliant structured security event logger for Python applications."
authors = [
    {name = "Luca Bello", email = "luca.bello@canonical.com"},
]
readme = "README.md"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
otel = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "codespell",
    "vulture",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "actionlint-py",
]

[project.urls]
Homepage = "https://github.com/lucabello/owasp-logger"
Repository = "https://github.com/lucabello/owasp-logger"
Issues = "https://github.com/lucabello/owasp-logger/issues"


# Building and publishing
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# Tools configuration
[tool.ruff]
line-length = 99

[tool.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,build,venv*"
ignore-words-list = "assertIn"

[tool.vulture]
min_confidence = 80
ignore_names = ["timeout_millis"]

[tool.pyright]
extraPaths = ["src", "examples"]
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = ["setup", "work", "teardown"]
